--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,25 @@
 version: '3'
 services:
+  api:
+      build: ./api
+      command: npm run start
+      volumes:
+        - ./api:/usr/app/api
+        - /usr/app/api/node_modules
+      ports:
+        - "3000:3000"
+      depends_on:
+        - dbpostgres
+      environment:
+        DATABASE_URL: postgres://phonelist@dbpostgres/phonelist
   dbpostgres:
     image: postgres
     restart: always
     volumes:
-      - ./postgresql_data:/var/lib/postgresql/data/
+      - ./db:/docker-entrypoint-initdb.d
     ports:
       - "5432:5432"
     environment:
-      POSTGRES_USER: root
+      POSTGRES_USER: phonelist
       POSTGRES_PASSWORD: ASD12asd
       POSTGRES_DB: phonelist
