--- a/api/package.json
+++ b/api/package.json
@@ -8,9 +8,12 @@
   "dependencies": {
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
-    "express": "~4.16.0",
+    "express": "^4.16.3",
+    "express-graphql": "^0.6.12",
+    "graphql": "^0.13.2",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
+    "pg-promise": "^8.4.5",
     "pug": "2.0.0-beta11"
   },
   "devDependencies": {
